# AnalogColorMeasurement

./: .gitignore  CMakeLists.txt  presentation_outline.txt
Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/: AnalysisEngine.cpp  AnalysisEngine.h  ArtifactFile.cpp  ArtifactFile.h  AudioEngine.cpp  AudioEngine.h  CRTLookAndFeel.cpp  CRTLookAndFeel.h  LNLModel.h  LatencyAligner.cpp  LatencyAligner.h  LevelMeter.cpp  LevelMeter.h  Main.cpp  MainComponent.cpp  MainComponent.h  MeasurementTypes.h  SessionWriter.cpp  SessionWriter.h  SignalGenerator.cpp  SignalGenerator.h  SpectrumDisplay.cpp  SpectrumDisplay.h  StimulusPlan.cpp  StimulusPlan.h
writeup/: analog_color_measurement.tex  build_progress.tex  combined_writeup.tex  plugin_features.tex
